--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+Here’s a complete single HTML file with all of your information, including your academic scholarships, awards, IEEE activities, projects, publications, volunteering, and certifications. Everything is well-organized into sections, and all categories are preserved.
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,9 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Md Mehedi Hasan's website, biography, projects, previous experience, and achievements.">
+    <meta name="description" content="Md Mehedi Hasan's website, biography, projects, previous experience, and published papers.">
     <meta name="author" content="Md Mehedi Hasan">
-    <meta name="keywords" content="Md Mehedi Hasan, Computer Science, BUBT, IEEE, SPARK, Bangladesh">
+    <meta name="keywords" content="Md Mehedi Hasan, computer science, BUBT, software engineering, IEEE, SPARK, Bangladesh">
 
     <!-- Title and Favicon -->
     <title>Md Mehedi Hasan</title>
@@ -112,9 +114,9 @@
                     <li class="nav-item"><a class="nav-link active" id="aboutme" href="#">About Me</a></li>
                     <li class="nav-item"><a class="nav-link" id="projects" href="#">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" id="publications" href="#">Publications</a></li>
-                    <li class="nav-item"><a class="nav-link" id="awards" href="#">Awards</a></li>
                     <li class="nav-item"><a class="nav-link" id="certifications" href="#">Certifications</a></li>
-                    <li class="nav-item"><a class="nav-link" id="experience" href="#">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link" id="awards" href="#">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link" id="volunteering" href="#">Volunteering</a></li>
                 </ul>
             </div>
         </div>
@@ -135,7 +137,7 @@
             <!-- About Me Section -->
             <div class="col-md-8 offset-md-1">
                 <h4>About Me</h4>
-                <p>I am Md Mehedi Hasan, a passionate Computer Science and Engineering student at Bangladesh University of Business and Technology (BUBT). My interests lie in software development, competitive programming, and contributing to the IEEE community. I have had the honor of serving as an IEEE Day Ambassador and holding multiple leadership roles within IEEE, which have greatly shaped my academic and professional journey.</p>
+                <p>I am a passionate Computer Science and Engineering student with a keen interest in software development, problem-solving, and competitive programming. I have participated in numerous academic competitions and am actively involved in the IEEE community.</p>
 
                 <h4>Academic Scholarships</h4>
                 <ul class="abme-honors-bullet">
@@ -151,20 +153,26 @@
                 <ul class="abme-honors-bullet">
                     <li>Finalist, Hardware-Based Innovative Idea Pitching - Brainstorming Week 2024 (BUBT)</li>
                     <li>Finalist, Innovative Hardware-Based Research Project Showcase - Brainstorming Week 2024 (BUBT)</li>
-                    <li>2nd Runner Up, Innovative Research Idea Competition (Software Engineering Mode) - Brainstorming Week 2024 (BUBT)</li>
+                    <li>2nd Runner Up, Innovative Research Idea Competition - Brainstorming Week 2024 (BUBT)</li>
                     <li>Best SPARK Volunteer 2023 - IEEE Computer Society Bangladesh Chapter</li>
-                    <li>Champion, Effective Presentation Skills Competition 2023 - IEEE Computer Society Bangladesh Chapter</li>
-                    <li>Winner, Unplastic Bangladesh 2024 Social Media Challenge - Sonali Bioplastics</li>
-                    <li>IEEE R-10 Ethics Champion 2023</li>
-                    <li>IEEE R-10 Ethics Champion 2024</li>
+                    <li>Champion, Effective Presentation Skills Competition 2023</li>
+                    <li>Winner, Unplastic Bangladesh 2024 Social Media Challenge</li>
+                    <li>IEEE R-10 Ethics Champion 2023 & 2024</li>
                     <li>Finalist, IEEE EAAC Student Contest 2024</li>
-                    <li>Honorable Mention, Preliminary ICPC Dhaka Regional 2023 (BUBT)</li>
+                    <li>Honorable Mention, Preliminary ICPC Dhaka Regional 2023 - BUBT</li>
                 </ul>
 
                 <h4>Projects</h4>
                 <ul class="abme-honors-bullet">
-                    <li>Smart Waste Management System - Brainstorming Week 2024 (BUBT)</li>
-                    <li>RFID Door Lock Access Control System - Brainstorming Week 2024 (BUBT)</li>
+                    <li>Smart Waste Management System (2024) - Developed for Brainstorming Week 2024 (BUBT).</li>
+                    <li>RFID Door Lock Access Control System (2024) - Developed for Brainstorming Week 2024 (BUBT).</li>
+                </ul>
+
+                <h4>Publications</h4>
+                <ul class="pub-block">
+                    <li>Project: Medicinal Plant Recognition using Deep Learning, Springer Singapore, 2022.</li>
+                    <li>Robots and Drones in Agriculture - Springer Singapore, 2021.</li>
+                    <li>Role-Framework of AI in Combating COVID-19 - Springer, 2021.</li>
                 </ul>
 
                 <h4>Certifications</h4>
@@ -172,17 +180,58 @@
                     <li>Introduction to Cybersecurity by Cisco</li>
                     <li>Graphic Elements of Design: Color Theory and Image Formats - Coursera</li>
                     <li>Basic Elements of Design: Design Principles and Software Overview - Coursera</li>
-                    <li>Networking Academy Learn-A-Thon 2020 by Cisco</li>
                 </ul>
 
-                <h4>Experience</h4>
+                <h4>Volunteering</h4>
                 <ul class="abme-honors-bullet">
-                    <li>Public Relations Coordinator - IEEE BUBT SB (2024-25)</li>
-                    <li>Vice-Chairperson - IEEE CS BUBT SBC (2023)</li>
-                    <li>Country Lead - IEEE PES Day 2024</li>
-                    <li>Vice-Chief - IEEE CS BDC Team SPARK (2024-25)</li>
-                    <li>Regional Lead - IEEE Day 2024 for Region-10</li>
-                    <li>Organizing Co-chair - International Congress on Recent Trends in Computer Science (ICRCS) 2024</li>
-                    <li>Social Media Team Member - IEEE Xtreme 18.0 (2024)</li>
-                    <li>IEEE R10 Ethics Champion (2024)</li>
-                </ul>
+                    <li>Country Lead for IEEE PES Day 2024</li>
+                    <li>Regional Lead, IEEE Day 2024 (Region-10)</li>
+                    <li>Public Relations Coordinator at IEEE BUBT Student Branch (2024-25)</li>
+                    <li>Vice-Chief at IEEE CS BDC Team SPARK (2024-25)</li>
+                    <li>Publicity Team Lead, Cyber Security Awareness Day 2023</li>
+                    <li>Organizing Co-chair, ICRCS 2024</li>
+                    <li>Social Media Team Member, IEEE Xtreme </li>
+                        <li>Social Media Team Member, IEEE Xtreme 18.0 (2024)</li>
+                <li>Public Relations Coordinator at IEEE BUBT SB (2024-25)</li>
+                <li>Organizing Co-chair, International Congress on Recent Trends in Computer Science (ICRCS) 2024</li>
+                <li>Participant, IEEE Xtreme 17.0</li>
+                <li>Public Relations Coordinator, IEEE CS BDC Team SPARK (2023)</li>
+                <li>Participant, IEEE YESIST12 (2022)</li>
+                <li>Mentor, IEEE CS BDC SAC 2024</li>
+                <li>Volunteer, IEEE COMPAS 2024</li>
+                <li>Ambassador Lead, IEEE PES YP Power the Future Summit 2023</li>
+                <li>Ambassador, IEEE Day 2023</li>
+                <li>Ambassador, IEEE Bangladesh Section Conferences 2024</li>
+                <li>Ambassador Lead, International Congress on Recent Trends in Computer Science (ICRCS-2023)</li>
+                <li>Publicity Team Member, IEEE PES Day 2023</li>
+            </ul>
+
+        </div>
+    </div>
+
+    <!-- Toggle for Dark/Light Mode -->
+    <div class="options-button" id="theme-toggle"><i class="fa-solid fa-lightbulb"></i></div>
+
+    <!-- JavaScript -->
+    <script>
+        $(document).ready(function() {
+            // Default theme is light, change to dark if needed
+            let isDarkMode = false;
+
+            $('#theme-toggle').click(function() {
+                // Toggle dark/light mode
+                $('body').toggleClass('dark-mode');
+                isDarkMode = !isDarkMode;
+
+                // Update the button icon
+                if (isDarkMode) {
+                    $('#theme-toggle i').removeClass('fa-lightbulb').addClass('fa-lightbulb-slash');
+                } else {
+                    $('#theme-toggle i').removeClass('fa-lightbulb-slash').addClass('fa-lightbulb');
+                }
+            });
+        });
+    </script>
+
+</body>
+</html>
